Added backgroung and card colour

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="card">
-  <div class="front pane" [style]="styles"></div>
-  <div class="back pane"[style]="styles"></div>
+<div class="card" [style]="backGroundStyle">
+  <div class="front pane" [style]="cardStyles"></div>
+  <div class="back pane"[style]="cardStyles"></div>
 </div>
